NetBSD Problem Report #57435

From www@netbsd.org  Wed May 24 09:56:32 2023
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 236141A9238
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 24 May 2023 09:56:32 +0000 (UTC)
Message-Id: <20230524095630.A8B581A9239@mollari.NetBSD.org>
Date: Wed, 24 May 2023 09:56:30 +0000 (UTC)
From: isaki@pastel-flower.jp
Reply-To: isaki@pastel-flower.jp
To: gnats-bugs@NetBSD.org
Subject: ddb "show" has two "mount" commands in 10.0_BETA.
X-Send-Pr-Version: www-1.0

>Number:         57435
>Category:       kern
>Synopsis:       ddb "show" has two "mount" commands in 10.0_BETA.
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed May 24 10:00:00 +0000 2023
>Closed-Date:    Sat Jun 03 15:26:49 +0000 2023
>Last-Modified:  Sat Jun 03 15:26:49 +0000 2023
>Originator:     Tetsuya Isaki
>Release:        NetBSD 10.0_BETA
>Organization:
>Environment:
NetBSD 10.0_BETA amd64
>Description:
ddb "show" has two "mount" commands, and the second one
can not be executed.


 db> show
 all             freelists       mount           pool            uvmexp
 aio_jobs        locks           mount           pools           vmem
 breaks          lock            mqueue          proc            vmems
 buf             lockstats       ncache          procs           vnode
 callout         kqueue          object          registers       vnode_lock
 devices         map             page            routes          watches
 event           mbuf            pages           sched_qs
 files           module          panic           socket
 db>


According to sys/ddb/db_command.c,
the first one is db_show_all_mount() (was added in 2019) and
the second one is db_mount_print_cmd() (was added in 2003).

What is the right situation?

(By the way, I have tried to split them into two commands, but
the second one, db_mount_print_cmd() looks to cause an address error
in m68k)

>How-To-Repeat:
Enter ddb.
>Fix:
I don't have.

>Release-Note:

>Audit-Trail:
From: mlelstv@serpens.de (Michael van Elst)
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/57435: ddb "show" has two "mount" commands in 10.0_BETA.
Date: Wed, 24 May 2023 11:14:14 -0000 (UTC)

 isaki@pastel-flower.jp writes:

 > breaks          lock            mqueue          proc            vmems
 > buf             lockstats       ncache          procs           vnode


 >According to sys/ddb/db_command.c,
 >the first one is db_show_all_mount() (was added in 2019) and
 >the second one is db_mount_print_cmd() (was added in 2003).

 >What is the right situation?

 The ddb command parser is just dumb (e.g.. the "all" keyword is ignored).
 Without rewriting, the easiest solution is to make the "show all mount"
 a "show all mounts" like it's done for proc / procs.

From: "Valery Ushakov" <uwe@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57435 CVS commit: src/sys/ddb
Date: Thu, 25 May 2023 21:46:55 +0000

 Module Name:	src
 Committed By:	uwe
 Date:		Thu May 25 21:46:55 UTC 2023

 Modified Files:
 	src/sys/ddb: db_command.c

 Log Message:
 ddb: PR kern/57435 - fix duplicate "show mount"

 Bolivar cannot carry double.  One of these commands should have been
 "show mounts", cf. page/pages and a few others.  While here fix the
 function name to be db_show_all_mounts to conform to the pattern.


 To generate a diff of this commit:
 cvs rdiff -u -r1.181 -r1.182 src/sys/ddb/db_command.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Tetsuya Isaki <isaki@pastel-flower.jp>
To: gnats-bugs@netbsd.org
Cc: kern-bug-people@netbsd.org,
	gnats-admin@netbsd.org,
	netbsd-bugs@netbsd.org
Subject: Re: PR/57435 CVS commit: src/sys/ddb
Date: Fri, 26 May 2023 12:45:27 +0900

 At Thu, 25 May 2023 21:50:01 +0000 (UTC),
 Valery Ushakov wrote:
 >  Committed By:	uwe
 >  Date:		Thu May 25 21:46:55 UTC 2023
 >  
 >  Modified Files:
 >  	src/sys/ddb: db_command.c
 >  
 >  Log Message:
 >  ddb: PR kern/57435 - fix duplicate "show mount"

 Thank you, uwe@ and mlelstv@!
 Would you pullup to -10 (and close it), please?
 ---
 Tetsuya Isaki <isaki@pastel-flower.jp / isaki@NetBSD.org>

State-Changed-From-To: open->needs-pullups
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 28 May 2023 05:47:09 +0000
State-Changed-Why:
wants -10


State-Changed-From-To: needs-pullups->pending-pullups
State-Changed-By: uwe@NetBSD.org
State-Changed-When: Mon, 29 May 2023 22:06:35 +0000
State-Changed-Why:
request number 188


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57435 CVS commit: [netbsd-10] src/sys/ddb
Date: Sat, 3 Jun 2023 14:47:52 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Jun  3 14:47:52 UTC 2023

 Modified Files:
 	src/sys/ddb [netbsd-10]: db_command.c

 Log Message:
 Pull up following revision(s) (requested by uwe in ticket #188):

 	sys/ddb/db_command.c: revision 1.182

 ddb: PR kern/57435 - fix duplicate "show mount"

 Bolivar cannot carry double.  One of these commands should have been
 "show mounts", cf. page/pages and a few others.  While here fix the
 function name to be db_show_all_mounts to conform to the pattern.


 To generate a diff of this commit:
 cvs rdiff -u -r1.181 -r1.181.4.1 src/sys/ddb/db_command.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: uwe@NetBSD.org
State-Changed-When: Sat, 03 Jun 2023 15:26:49 +0000
State-Changed-Why:
pulled up
.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2023 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.