ddb: PR kern/57435 - fix duplicate "show mount"

Bolivar cannot carry double.  One of these commands should have been
"show mounts", cf. page/pages and a few others.  While here fix the
function name to be db_show_all_mounts to conform to the pattern.